--- a/index.html
+++ b/index.html
@@ -7,13 +7,15 @@
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
-    <div id="inputDiv">
-      <input type="text" name="input-Todo" class="input-todo" />
-      <button onclick="addTodo()">Add</button>
-    </div>
-    <div id="editDiv" class="hide">
-      <input type="text" name="edit-todo" class="edit-todo" />
-      <button onclick="updateTodo()">Save</button>
+    <div class="main">
+      <div id="inputDiv">
+        <input type="text" name="input-Todo" class="input-todo" />
+        <button onclick="addTodo()">Add</button>
+      </div>
+      <div id="editDiv" class="hide">
+        <input type="text" name="edit-todo" class="edit-todo" />
+        <button onclick="updateTodo()">Save</button>
+      </div>
     </div>
     <ol></ol>
     <script src="./app.js"></script>
